--- a/section_06/requirements.txt
+++ b/section_06/requirements.txt
@@ -4,7 +4,9 @@ asyncpg==0.25.0
 cffi==1.15.1
 click==8.1.3
 cryptography==37.0.2
+dnspython==2.3.0
 ecdsa==0.18.0
+email-validator==1.3.1
 fastapi==0.75.2
 greenlet==2.0.1
 h11==0.14.0
